// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sidebar renders a closed sidebar 1`] = `
<div>
  <div
    class="content-dashboard sidebar sidebar-light sidebar-sm"
  />
</div>
`;

exports[`Sidebar renders a sidebar with a header with title and subtitle 1`] = `
<div>
  <div
    class="content-dashboard sidebar sidebar-light sidebar-sm"
  >
    <section
      class="sidebar-header"
    >
      <div
        class="sidebar-section autofit-row"
      >
        <div
          class="autofit-col autofit-col-expand"
        >
          <h2
            class="font-weight-bold mb-0 pr-2 small"
          >
            Title
          </h2>
        </div>
        <div
          class="autofit-col"
        >
          <button
            aria-label="Close"
            class="mt-n2 text-secondary btn btn-monospaced btn-unstyled"
            type="button"
          >
            <svg
              class="lexicon-icon lexicon-icon-times"
              role="presentation"
            >
              <use
                xlink:href="#times"
              />
            </svg>
          </button>
        </div>
      </div>
    </section>
  </div>
</div>
`;

exports[`Sidebar renders a sidebar with body with custom content 1`] = `
<div>
  <div
    class="content-dashboard sidebar sidebar-light sidebar-sm"
  >
    <div
      class="sidebar-body"
    >
      <div>
        Custom content text
      </div>
    </div>
  </div>
</div>
`;

exports[`Sidebar renders an open sidebar 1`] = `
<div>
  <div
    class="content-dashboard sidebar sidebar-light sidebar-sm"
  />
</div>
`;
